--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>PRAMAN</title>
+    <link rel="icon" href="./src/assets/logo.png" type="image/x-icon">
+
   </head>
   <body>
     <div id="root"></div>
